# Executewithyou-video-server

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  DATABASE.md  KNOWN_ISSUES.md  Makefile  README.md  db assesment.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.services copy.yml  docker-compose.services.yml  docker-compose.yml  egress.yaml  livekit.yaml  next command.md  prometheus.yml  startup commands.md  streaming-protocol.ts  v4-to-v6.md
.claude/: settings.local.json
.github/workflows/: ci.yml
archive/: 002_oauth_connections.sql
archive/archive/: ALLSTRM_Class_CoreEntities.puml  ALLSTRM_Component_Diagram.puml  ALLSTRM_Sequence_Meeting.puml  ALLSTRM_Sequence_Studio.puml  ALLSTRM_System_Overview.puml  OLD_API_REFERENCE.md  OLD_BACKEND_SERVICES.md  OLD_DIAGRAMS.md  OLD_HYBRID_DEPLOYMENT.md  OLD_IMPLEMENTATION_TASKS.md  OLD_WHAT_IS_ALLSTRM.md  OLD_sfu_architecture.puml  README_REFACTOR.md  REFACTOR_SUMMARY.md
archive/rust-backend-v1/: Cargo.toml  Makefile  docker-compose.dev-services.yml  docker-compose.services.yml  prometheus.yml  sqlx.toml
archive/rust-backend-v1/services/: .env.example
archive/rust-backend-v1/services/common/src/: error.rs  lib.rs
archive/rust-backend-v1/services/core/: Dockerfile  Dockerfile.dev  README.md
archive/rust-backend-v1/services/core/src/: config.rs  db.rs  main.rs
archive/rust-backend-v1/services/core/src/oauth/: instagram.rs  kick.rs  provider.rs  twitch.rs  twitter.rs  vimeo.rs
archive/rust-backend-v1/services/core/src/routes/: broadcast.rs  destinations.rs  mod.rs  oauth.rs  rooms.rs  sessions.rs  tiers.rs
archive/rust-backend-v1/services/gateway/: Dockerfile.dev
archive/rust-backend-v1/services/gateway/src/: auth.rs  config.rs  main.rs  metrics.rs  rate_limit.rs  websocket.rs
archive/rust-backend-v1/services/gateway/src/routes/: destinations.rs  recordings.rs  rooms.rs  upload.rs
archive/rust-backend-v1/services/protocol/src/: client.rs  server.rs  types.rs
archive/rust-backend-v1/services/sfu/: Cargo.toml  Dockerfile.dev
archive/rust-backend-v1/services/sfu/src/: config.rs  egress.rs  main.rs  metrics.rs  room.rs  rtp_forwarder.rs  signaling.rs  track_router.rs
archive/rust-backend-v1/services/storage/: Dockerfile  Dockerfile.dev
archive/rust-backend-v1/services/storage/src/: config.rs  db.rs  main.rs
archive/rust-backend-v1/services/storage/src/routes/: assets.rs  download.rs  health.rs  mod.rs  upload.rs
archive/rust-backend-v1/services/stream/: Cargo.toml  Dockerfile.dev
archive/rust-backend-v1/services/stream/src/: engine.rs  ffmpeg.rs  ingest.rs  main.rs  session.rs
archive/rust-backend-v1/services/stream/src/routes/: control.rs  mod.rs  rtmp.rs  sessions.rs
docs/: ARCHITECTURE.md  FRONTEND_BACKEND_WIRING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_TASKS.md  PHASE1_STATUS.md  PROFIT_STRATEGY.md  QUICK_REFERENCE.md  README.md
docs/api/: README.md
docs/architecture/: DIAGRAMS.md
docs/architecture/uml/: ALLSTRM_Deployment_Architecture.puml  ALLSTRM_Service_Architecture.puml  ALLSTRM_State_RoomStatus.puml
docs/archive/: IMPLEMENTATION_CHECKLIST.md  allstrm_complete_ecosystem_architecture_decision_document.md
docs/deployment/: DEPLOYMENT.md  HYBRID_DEPLOYMENT.md
frontend-next/: .env.local  Dockerfile  Dockerfile.dev  README.md  build_output.txt  package-lock.json  package.json  ts_errors.txt  tsconfig.tsbuildinfo
frontend-next/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend-next/src/app/dashboard/: page.tsx
frontend-next/src/app/login/: page.tsx
frontend-next/src/app/pricing/: page.tsx
frontend-next/src/app/signup/: page.tsx
frontend-next/src/components/: AccountSettings.tsx  Button.tsx  ConnectionStatus.tsx  Destinations.tsx  ErrorBoundary.tsx  Hero3D.tsx  Library.tsx  Members.tsx  Preloader.tsx  PricingPlans.tsx  Projects.tsx  Studio.tsx  StudioLiveKit.tsx  StudioSetup.tsx  TeamSettings.tsx  UploadQueue.tsx
frontend-next/src/components/Editor/: VideoEditor.tsx
frontend-next/src/components/GreenRoom/: CueSystem.tsx  GreenRoom.tsx
frontend-next/src/components/Meeting/: ChatToasts.tsx  FloatingReactions.tsx  Meeting.tsx  (+3 more)
frontend-next/src/contexts/: AuthContext.tsx
frontend-next/src/hooks/: useAllstrm.ts  useAllstrmLiveKit.ts  useBackstage.ts  useMeetingMedia.ts  useMeetingUI.ts  useStudioEngines.ts  useTimelineState.ts  useUploadQueue.ts
frontend-next/src/lib/: AdaptiveResolutionController.ts  api.ts  constants.ts  rateLimit.ts  sessionManager.ts  tierConfig.ts
frontend-next/src/stores/: studioStore.ts
frontend-next/src/types/: editor.ts  index.ts  layout.ts  messages.ts  participant.ts
frontend-next/src/utils/: VideoProcessor.ts  filePresentation.ts  layoutEngine.ts  permissions.ts
migrations/: 000_consolidated_schema.sql  001_enterprise_features.sql  003_consolidated_all.sql  004_stripe_subscriptions.sql  005_fix_handle_new_user.sql  006_grant_schema_permissions.sql  README.md
services/: README.md
services/common/: Cargo.toml
services/common/src/: config.rs  db.rs  id.rs
services/core/: Cargo.toml
services/core/src/: config.rs  db.rs  main.rs
services/core/src/oauth/: amazon.rs  brightcove.rs  custom_rtmp.rs  facebook.rs  hopin.rs  linkedin.rs  mod.rs  tiktok.rs  youtube.rs
services/core/src/routes/: health.rs  mod.rs  users.rs
services/gateway/: Cargo.toml  Dockerfile  README.md
services/gateway/src/: main.rs  proxy.rs  websocket.rs
services/gateway/src/routes/: destinations.rs  mod.rs  recordings.rs  rooms.rs  signaling.rs  upload.rs
services/protocol/: Cargo.toml
services/protocol/src/: client.rs  lib.rs  server.rs  types.rs
services/sfu/: Cargo.toml  Dockerfile  README.md
services/sfu/src/: main.rs  peer.rs  room.rs  signaling.rs
services/storage/: Cargo.toml  README.md
services/storage/src/: s3.rs
services/storage/src/routes/: recordings.rs
services/stream/: Dockerfile  README.md
services/stream/src/: config.rs  engine.rs  ffmpeg.rs  main.rs  relay.rs  session.rs
supabase/: config.toml  kong.yml
supabase/init/: 00-init.sql  01-run-migrations.sh
(+68 files in other folders)
