[package]
name = "allstrm-core"
version = "0.1.0"
edition = "2021"
description = "ALLSTRM Core Service - Room management, users, destinations"
authors = ["ALLSTRM Team"]

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Shared crates
allstrm-common = { path = "../common" }
allstrm-protocol = { path = "../protocol" }

# Error handling
anyhow = "1"
thiserror = "1"

# Password hashing (for API keys)
argon2 = "0.5"
rand = "0.8"

# Hex encoding
hex = "0.4"

# OAuth
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
url = "2"
base64 = "0.21"
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
