[package]
name = "allstrm-gateway"
version = "0.1.0"
edition = "2021"
description = "ALLSTRM API Gateway - WebSocket routing, JWT validation, rate limiting"
authors = ["ALLSTRM Team"]

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"

# JWT & Auth
jsonwebtoken = "9"
base64 = "0.21"

# HTTP client (for service-to-service)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Shared crates
allstrm-common = { path = "../common" }
allstrm-protocol = { path = "../protocol" }

# Error handling
anyhow = "1"
thiserror = "1"

# Redis for pub/sub
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tokio-test = "0.4"
