[package]
name = "allstrm-protocol"
version = "0.1.0"
edition = "2021"
description = "ALLSTRM Protocol - WebSocket message types and signaling protocol"
authors = ["ALLSTRM Team"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"

[dev-dependencies]
serde_test = "1"
