[package]
name = "allstrm-storage"
version = "0.1.0"
edition = "2021"
description = "ALLSTRM Storage Service - Recording management, presigned URLs, R2/S3"
authors = ["ALLSTRM Team"]

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# S3/R2 client
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (for recording metadata)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Configuration
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Shared crates
allstrm-common = { path = "../common" }
allstrm-protocol = { path = "../protocol" }

# Error handling
anyhow = "1"
thiserror = "1"

# Hex/base64 encoding
hex = "0.4"
base64 = "0.21"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Mime types
mime = "0.3"
mime_guess = "2"

[dev-dependencies]
tokio-test = "0.4"
