[package]
name = "allstrm-sfu"
version = "0.1.0"
edition = "2021"
description = "ALLSTRM SFU (S1) - WebRTC Selective Forwarding Unit"
authors = ["ALLSTRM Team"]

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Web framework (for internal API)
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebRTC
webrtc = "0.10"

# WebSocket
futures = "0.3"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Shared crates
allstrm-common = { path = "../common" }
allstrm-protocol = { path = "../protocol" }

# Error handling
anyhow = "1"
thiserror = "1"

# Async utilities
async-trait = "0.1"
dashmap = "5"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
